kubernetes/applications/monitoring/mimir/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir
  labels:
    app: mimir
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mimir
  replicas: 1
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir
          image: grafana/mimir:2.17.5
          imagePullPolicy: Always
          args: ["-config.file=/etc/mimir/mimir.yml"]
          ports:
            - containerPort: 9009
          volumeMounts:
            - mountPath: "/etc/mimir/mimir.yml"
              name: mimir-config-mount
              subPath: mimir.yml
            - mountPath: "/data"
              name: mimir-volume-mount
      volumes:
        - name: mimir-config-mount
          configMap:
            name: mimir-config
        - name: mimir-volume-mount
          persistentVolumeClaim:
            claimName: mimir-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mimir
spec:
  type: ClusterIP
  selector:
    app: mimir
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9009
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mimir-basic-auth-middleware
spec:
  basicAuth:
    secret: mimir-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mimir
spec:
  routes:
    - kind: Rule
      match: Host(`mimir.riichi.me`)
      priority: 10
      services:
        - name: mimir
          port: 80
      middlewares:
        - name: mimir-basic-auth-middleware
